hh-core/src/adapter/snapshots/hh_core__adapter__tests__codex_parse_agent_message.snap
---
source: hh-core/src/adapter/mod.rs
expression: snap_codex(&pr)
---
{
  "events": [
    {
      "blob_hash": null,
      "blob_size": null,
      "body_json": {
        "text": "I can help with that"
      },
      "correlates": null,
      "kind": "agent_message",
      "session_id": "test-session-id",
      "step": null,
      "summary": "I can help with that",
      "ts_ms": 1500
    }
  ],
  "is_assistant_message": true
}
