hh-core/src/adapter/snapshots/hh_core__adapter__tests__codex_parse_function_call_and_output.snap
---
source: hh-core/src/adapter/mod.rs
expression: snap_codex(&pr)
---
{
  "events": [
    {
      "blob_hash": null,
      "blob_size": null,
      "body_json": {
        "correlate_key": "call_1",
        "input": {
          "command": "ls"
        },
        "name": "Bash"
      },
      "correlates": null,
      "kind": "tool_call",
      "session_id": "test-session-id",
      "step": null,
      "summary": "tool_call: Bash",
      "ts_ms": 2000
    }
  ],
  "is_assistant_message": false
}
