hh-core/src/adapter/snapshots/hh_core__adapter__tests__gemini_parse_user_message.snap
---
source: hh-core/src/adapter/mod.rs
expression: snap_gemini(&pr)
---
{
  "events": [
    {
      "blob_hash": null,
      "blob_size": null,
      "body_json": {
        "text": "hello"
      },
      "correlates": null,
      "kind": "user_message",
      "session_id": "test-session-id",
      "step": null,
      "summary": "hello",
      "ts_ms": 699
    }
  ],
  "is_assistant_message": false
}
