hh-core/src/adapter/snapshots/hh_core__adapter__tests__parse_assistant_followup_with_model_usage.snap
---
source: hh-core/src/adapter/mod.rs
expression: snap(&pr)
---
{
  "events": [
    {
      "blob_hash": null,
      "blob_size": null,
      "body_json": {
        "text": "The repo is empty and Cargo.toml is missing."
      },
      "correlates": null,
      "kind": "agent_message",
      "session_id": "test-session-id",
      "step": null,
      "summary": "The repo is empty and Cargo.toml is missing.",
      "ts_ms": 3100
    }
  ],
  "is_assistant_message": true
}
