hh-core/src/adapter/snapshots/hh_core__adapter__tests__parse_user_text_prompt.snap
---
source: hh-core/src/adapter/mod.rs
expression: snap(&pr)
---
{
  "events": [
    {
      "blob_hash": null,
      "blob_size": null,
      "body_json": {
        "text": "Please list the files in the repo and show Cargo.toml."
      },
      "correlates": null,
      "kind": "user_message",
      "session_id": "test-session-id",
      "step": null,
      "summary": "Please list the files in the repo and show Cargo.toml.",
      "ts_ms": 699
    }
  ],
  "is_assistant_message": false
}
